--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,15 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
+    // --- LIBRERÍAS PARA LA API ---
+    implementation("com.squareup.retrofit2:retrofit:2.9.0")
+    implementation("com.squareup.retrofit2:converter-gson:2.9.0")
+
+    // --- LIBRERÍA PARA IMÁGENES ---
+    implementation("github.com.bumptech.glide:glide:4.15.1")
+    annotationProcessor("github.com.bumptech.glide:compiler:4.15.1")
+
+    // --- LIBRERÍAS PARA FIREBASE (2FA) ---
+    implementation(platform("com.google.firebase:firebase-bom:32.7.0"))
+    implementation("com.google.firebase:firebase-auth")
 }
