--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,13 @@
 plugins {
     alias(libs.plugins.android.application)
+
+
+    // Add the Google services Gradle plugin
+    id 'com.google.gms.google-services'
+
+
+
+
 }
 
 android {
@@ -51,4 +59,10 @@ dependencies {
     // --- LIBRERÍAS PARA FIREBASE (2FA) ---
     implementation(platform("com.google.firebase:firebase-bom:32.7.0"))
     implementation("com.google.firebase:firebase-auth")
+
+    implementation platform('com.google.firebase:firebase-bom:34.8.0')
+    implementation 'com.google.firebase:firebase-analytics'
+
+    // Add the dependencies for any other desired Firebase products
+    // https://firebase.google.com/docs/android/setup#available-libraries
 }
