--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         <activity android:name=".ui.RegisterActivity" android:exported="false" />
         <activity android:name=".ui.LoginActivity"     android:exported="false" />
         <activity android:name=".ui.MovieCatalogActivity"     android:exported="false" />
+        <activity android:name=".ui.MovieDetailActivity"     android:exported="false" />
     </application>
 
 </manifest>
