alertas y notificacionjes con laspracticas del OWAPS

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,29 +1,38 @@
 plugins {
-    alias(libs.plugins.android.application)
-
-
-    // Add the Google services Gradle plugin
+    id 'com.android.application'
     id 'com.google.gms.google-services'
-
-
-
-
 }
 
 android {
     namespace 'com.example.cineapp'
-    compileSdk {
-        version = release(36)
-    }
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.example.cineapp"
         minSdk 24
-        targetSdk 36
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        // --- CÓDIGO CORREGIDO PARA LEER LA API KEY ---
+        // (Esto usa sintaxis Groovy, no Kotlin)
+        Properties properties = new Properties()
+        if (project.rootProject.file('local.properties').exists()) {
+            properties.load(project.rootProject.file('local.properties').newDataInputStream())
+        }
+
+        // Si la clave no existe, pone un texto vacío para que no de error
+        def tmdbApiKey = properties.getProperty('TMDB_API_KEY', "")
+
+        // Inyectamos la variable en BuildConfig
+        buildConfigField "String", "TMDB_API_KEY", "\"${tmdbApiKey}\""
+    }
+
+    buildFeatures {
+        buildConfig true
+        viewBinding true
     }
 
     buildTypes {
@@ -32,43 +41,41 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
 dependencies {
-    implementation libs.appcompat
-    implementation libs.material
-    implementation libs.activity
-    implementation libs.constraintlayout
-    testImplementation libs.junit
-    androidTestImplementation libs.ext.junit
-    androidTestImplementation libs.espresso.core
-    // --- LIBRERÍAS PARA LA API ---
-    implementation("com.squareup.retrofit2:retrofit:2.9.0")
-    implementation("com.squareup.retrofit2:converter-gson:2.9.0")
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.11.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.activity:activity:1.8.0' // Importante para intents
 
-    // --- LIBRERÍA PARA IMÁGENES ---
-    // Librería principal de Glide
+    // --- RETROFIT (API) ---
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    // --- GLIDE (Imágenes) ---
     implementation 'com.github.bumptech.glide:glide:4.15.1'
-
-    // Procesador de anotaciones para Java (aquí es donde estaba el error)
     annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
-    // --- LIBRERÍAS PARA FIREBASE (2FA) ---
-    implementation(platform("com.google.firebase:firebase-bom:32.7.0"))
-    implementation("com.google.firebase:firebase-auth")
 
-    implementation platform('com.google.firebase:firebase-bom:34.8.0')
+    // --- FIREBASE ---
+    implementation platform('com.google.firebase:firebase-bom:32.7.0')
+    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.firebase:firebase-database'
     implementation 'com.google.firebase:firebase-analytics'
 
-    // Reproductor de YouTube
+    // --- EXTRAS ---
     implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:12.1.0'
 
-    implementation("com.google.android.material:material:1.9.0")
+    // Testing
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-    implementation("com.google.firebase:firebase-database")
-    // Add the dependencies for any other desired Firebase products
-    // https://firebase.google.com/docs/android/setup#available-libraries
+    //notificaciones
+    implementation"com.google.firebase:firebase-messaging"
 }
